--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" href="styles.css" />
+
 <body>
-<h1> brumao </h1>
-<p> among </p>
+<h1>  </h1>
 </body>
 </html>
