--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title> Public Research Repository </title>
 <link rel="stylesheet" href="styles.css" />
 <body>
-<h1> abacus </h1>
+
+<h1> Public Research Repository </h1>
+<p style="color:#5b5b66;"> Managed by N. Borowski</p>
+<a href="url">link text</a>
+
 </body>
 </html>
