--- a/linguistics/linguistics.html
+++ b/linguistics/linguistics.html
@@ -9,7 +9,7 @@
 <p style="color:#5b5b66;"> Managed by N. Borowski</p>
 <p> Click on any link to get redirected to their category.</p>
 
-<a href="/linguistics/linguistics.html"> Linguistics </a>
+<a href="/linguistics/categories/greek.html"> Greek </a>
 
 </body>
 </html>
