--- a/linguistics/linguistics.html
+++ b/linguistics/linguistics.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title> Public Research Repository </title>
-<link rel="stylesheet" href="styles.css" />
+<link rel="stylesheet" href="/styles.css" />
 <body>
 
 <h1> Public Research Repository </h1>
