--- a/linguistics/linguistics.html
+++ b/linguistics/linguistics.html
@@ -6,6 +6,7 @@
 <body>
 
 <h1> Public Research Repository </h1>
+<h2> Linguistics </h2>
 <p style="color:#5b5b66;"> Managed by N. Borowski</p>
 <p> Click on any link to get redirected to their category.</p>
 
